# wechat_group_summary

./: .gitignore  README.md  plan.md  pyproject.toml
prompts_example/: README.md
refs/: .gitkeep
src/wechat_group_summary/: cli.py  config.py  constants.py  exceptions.py  llm.py  models.py  paths.py  state.py  summary.py  weflow.py
tests/: test_cli.py  test_config.py  test_group_resolution.py  test_paths.py  test_summary.py
